--- a/es/pom.xml
+++ b/es/pom.xml
@@ -73,6 +73,10 @@
 			<artifactId>fastjson</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.csl</groupId>
 			<artifactId>base</artifactId>
 			<version>1.0-SNAPSHOT</version>
