--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,21 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.40</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.5</version>
+            </dependency>
+            <dependency>
+                <groupId>com.googlecode.xmemcached</groupId>
+                <artifactId>xmemcached</artifactId>
+                <version>2.4.2</version>
+            </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>2.9.0</version>
+            </dependency>
             <!--Spring 核心模块，其它模块大量使用spring-core -->
             <dependency>
                 <groupId>org.springframework</groupId>
